--- a/IMKit/build.gradle
+++ b/IMKit/build.gradle
@@ -5,10 +5,11 @@ android {
     buildToolsVersion "21.1.2"
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 19
+        versionCode 2016053022
+        versionName "2.6.1 Dev"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -37,4 +38,5 @@ android {
 dependencies {
     compile fileTree(dir: 'src/main/libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.0.3'
+    compile files('src/main/libs/Rong_IMKit_v2_6_1.jar')
 }
