--- a/IMKit/build.gradle
+++ b/IMKit/build.gradle
@@ -6,10 +6,9 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 19
-        versionCode 2016053022
-        versionName "2.6.1 Dev"
+        versionCode 2016011122
+        versionName "2.6.2 Dev"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -19,24 +18,18 @@ android {
 
     sourceSets {
         main {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            java.srcDirs = ['src/main/java']
+            resources.srcDirs = ['src/main/java']
+            renderscript.srcDirs = ['src/main/java']
             res.srcDirs = ['src/main/res']
             assets.srcDirs = ['src/main/assets']
-            manifest.srcFile 'src/main/AndroidManifest.xml'
             jni.srcDirs = []
             jniLibs.srcDirs = ['src/main/libs']
         }
-    }
-
-    lintOptions {
-        checkReleaseBuilds false
-        // Or, if you prefer, you can continue to check for errors in release builds,
-        // but continue the build even when errors are found:
-        abortOnError false
     }
 }
 
 dependencies {
     compile fileTree(dir: 'src/main/libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.0.3'
-    compile files('src/main/libs/Rong_IMKit_v2_6_1.jar')
 }
