--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 05 21:44:41 CST 2016
-sdk.dir=/Users/Bob_ge/Library/Android/sdk
+#Wed Jun 08 18:05:20 CST 2016
+ndk.dir=/Users/zhanglei/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/zhanglei/Library/Android/sdk
