--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 android {
-    compileSdkVersion 21
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "io.rong.app"
         minSdkVersion 9
         targetSdkVersion 19
         versionCode 2016053022
-        versionName "2.6.1 Dev"
+        versionName "2.6.2 Dev"
     }
 
     signingConfigs {
